--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^0.21.1",
-    "expo": "~52.0.40",
+    "dayjs": "^1.11.13",
+    "expo": "52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
